Add VoxelGrid and SmoothMeshBuilder classes; update image writing paths and enhance tests for AABB and VoxelGrid